--- a/style.css
+++ b/style.css
@@ -11,25 +11,22 @@
     grid-column: 1 / 4;
     font-size: 100px;
     font-weight: bolder;
-    align-self: center;
-    align-content: center
+    text-align: center;
 
  }
 
  .sidebar-left {
-     display: grid;
      grid-row: 2;
      grid-column: 1 / 2;
+     font-size: 50px
  }
 
  .sidebar-right {
-     display: grid;
      grid-row: 2;
      grid-column: 3 / 4;
  }
 
  footer {
-     display: grid;
      grid-row: 3;
      grid-column: 1 / 4;
  }
