--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 
 .grid {
     display: grid;
-    grid-template-columns: 150px auto 150px;
-    grid-template-rows: repeat(3, 100px);
-    grid-gap: 1em;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
+    height: 100%;
   }
 
   header {
     grid-row: 1;
     grid-column: 1 / 4;
-    font-size: 100px;
+    font-size: 50px;
     font-weight: bolder;
     text-align: center;
 
@@ -18,20 +18,43 @@
  .sidebar-left {
      grid-row: 2;
      grid-column: 1 / 2;
-     font-size: 50px
+     font-size: 20px;
  }
 
  .sidebar-right {
      grid-row: 2;
      grid-column: 3 / 4;
+     font-size: 20px;
+     font-weight: bolder;
  }
 
  footer {
      grid-row: 3;
      grid-column: 1 / 4;
+     font-size: 20px;
+     font-weight: bolder;
+     text-align: center;
  }
 
  content {
      grid-row: 2;
      grid-column: 2 / 3;
+     
  }
+ img {
+     max-height: 5px;
+     max-width: 5px;
+ }
+
+ .container {
+    background-color: lightgrey;
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 5px 5px 5px 5px 5px;
+    grid-template-rows: 5px 5px 5px 5px 5px;
+    height: 95%;
+    
+    
+}
