--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 1fr 3fr 1fr;
-    height: 100%;
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr;
+    height: 95%
   }
 
   header {
@@ -31,30 +31,32 @@
  footer {
      grid-row: 3;
      grid-column: 1 / 4;
-     font-size: 20px;
+     font-size: 200px;
      font-weight: bolder;
      text-align: center;
+     justify-content: flex-end;
  }
 
  content {
      grid-row: 2;
      grid-column: 2 / 3;
+     height: 95%;
      
  }
  img {
-     max-height: 5px;
-     max-width: 5px;
+     max-height: 800px;
+     max-width: 800px;
+     
  }
 
  .container {
     background-color: lightgrey;
     color: #fff;
     border-radius: 5px;
-    padding: 20px;
+    padding: 5px;
     display: grid;
-    grid-template-columns: 5px 5px 5px 5px 5px;
-    grid-template-rows: 5px 5px 5px 5px 5px;
-    height: 95%;
-    
-    
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;  
+    justify-content: center;
+   
 }
